--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-root></app-root>
-<router-outlet></router-outlet>
+<app-header></app-header>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+      <app-category-list></app-category-list>
+    </div>
+    <div class="col-9">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
