--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a routerLink="/" class="navbar-brand">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-    aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+  <div class="container py-3">
 
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <a routerLink="/" class="navbar-brand text-dark">TREESTONE</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+      aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <!-- <li class="nav-item active">
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+
+        <!-- <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
@@ -17,11 +19,11 @@
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li> -->
-    </ul>
-    <span class="navbar-text ml-auto">
-      Cart (0)
-    </span>
-    <button class="btn btn-outline-success my-2 my-sm-0">#</button>
-
+      </ul>
+      <span class="navbar-text ml-auto mr-5 text-dark">
+        Cart (0)
+      </span>
+      <button class="btn btn-dark rounded-circle ml-1 my-2 my-sm-0">#</button>
+    </div>
   </div>
 </nav>
