--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,7 @@
-<div>
-  <h1>Welcome. Select a service to start shopping.</h1>
-</div>
+<div class="row text-dark">
+  <div class="col-2"></div>
+  <div class="col">
+    <h1 class="home-title mb-5">Welcome.</h1>
+    <h1 class="home-title mt-2">Select a service<br />to get started.</h1>
+
+    <<<(animated left arrow) </div> </div>
