--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container py-3">
 
-    <a routerLink="/" class="navbar-brand text-dark">TREESTONE</a>
+    <a routerLink="/" class="navbar-brand has-text-dark">ACK</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
       aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,10 +20,12 @@
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li> -->
       </ul>
-      <span class="navbar-text ml-auto mr-5 text-dark">
+      <span class="navbar-text ml-auto mr-5 has-text-dark">
         Cart (0)
       </span>
-      <button class="btn btn-dark rounded-circle ml-1 my-2 my-sm-0">#</button>
+      <button class="btn btn-dark rounded-circle ml-1 my-2 my-sm-0"><i class="material-icons has-text-white">
+          shopping_cart
+        </i></button>
     </div>
   </div>
 </nav>
