--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="row text-dark">
-  <div class="col-2"></div>
-  <div class="col">
+<div class="row has-text-dark">
+  <div class="col-md-2"></div>
+  <div class="col-md col-12">
     <h1 class="home-title mb-5">Welcome.</h1>
     <h1 class="home-title mt-2">Select a service<br />to get started.</h1>
 
