--- a/src/app/components/shoes/shoes.component.html
+++ b/src/app/components/shoes/shoes.component.html
@@ -1,5 +1,5 @@
 <div>
-  <ul *ngFor="let product of products">
+  <ul class="pl-0" *ngFor="let product of products">
     <app-product [product]="product"></app-product>
   </ul>
 </div>
