--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-3">
+    <div class="col-md-3 col-12">
       <app-category-list></app-category-list>
     </div>
-    <div class="col-9">
+    <div class="col-md-9 col-12">
       <router-outlet></router-outlet>
     </div>
   </div>
