--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,14 +1,15 @@
 <div class="row product">
-  <div class="col-6">
+  <div class="col-md-5 col-12">
     <div class="card bg-dark">
       <img src="{{product.image}}" class="card-img product-img" alt="Image for {{ product.title }} product">
     </div>
   </div>
-  <div class="col-6">
-    <h2 class="product-name text-dark mb-4">{{product.name}}</h2>
-    <h3 class="product-price text-dark mb-5">${{product.price}}</h3>
-    <p class="product-description text-dark mb-5">{{product.description}}</p>
-    <button class="product-add-to-cart btn-dark rounded-pill btn-lg text-off-white text-uppercase"
+  <div class="col-md"></div>
+  <div class="col-md-5 col-12 py-4">
+    <h2 class="product-name has-text-dark mb-4">{{product.name}}</h2>
+    <h3 class="product-price has-text-dark mb-5">${{product.price.toFixed(2)}}</h3>
+    <p class="product-description has-text-dark mb-5">{{product.description}}</p>
+    <button class="product-add-to-cart btn-dark rounded-pill btn-lg has-text-off-white text-uppercase"
       (click)="addProductToCart">Add to
       cart</button>
   </div>
