--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,11 +1,11 @@
 <div class="row product">
-  <div class="col-md-5 col-12">
-    <div class="card bg-dark">
+  <div class="col-lg-5 col-12">
+    <div class="card">
       <img src="{{product.image}}" class="card-img product-img" alt="Image for {{ product.title }} product">
     </div>
   </div>
-  <div class="col-md"></div>
-  <div class="col-md-5 col-12 py-4">
+  <div class="col-xl col-lg-1"></div>
+  <div class="col-lg-5 col-12 py-4">
     <h2 class="product-name has-text-dark mb-4">{{product.name}}</h2>
     <h3 class="product-price has-text-dark mb-5">${{product.price.toFixed(2)}}</h3>
     <p class="product-description has-text-dark mb-5">{{product.description}}</p>
