--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,11 +1,18 @@
+@import "src/styles";
+
 .product-add-to-cart {
-  background-color: #3c3837;
+  background-color: $dark;
   font-size: 16px;
   padding: 15px 45px;
   border: none;
   box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
-  transition: .25s ease-out;
+  transition: .2s ease;
   position: relative;
+
+  @media (max-width: 1199.98px) {
+    font-size: 15px;
+    padding: 15px 40px;
+  }
 
   &:hover {
     background-color: #23272b;
@@ -17,28 +24,48 @@
 
 .product-name {
   font-size: 48px;
+
+  @media (max-width: 1199.98px) {
+    font-size: 34px;
+  }
 }
 
 .product-price {
   font-size: 36px;
+
+  @media (max-width: 1199.98px) {
+    font-size: 26px;
+  }
 }
 
 .product-description {
   font-size: 20px;
+
+  @media (max-width: 1199.98px) {
+    font-size: 16px;
+  }
 }
 
-.product-img {}
+.product-img {
+  max-height: 525px;
+  max-width: 405px;
+}
 
 .card {
   border: none;
   border-radius: 17px;
   overflow: hidden;
-  box-shadow: 4px 4px 93px 0px rgba(255, 90, 45, 0.22);
+  box-shadow: 4px 4px 93px 0px rgba(235,59,79, 0.22);
   max-height: 525px;
-  height: 100%;
+  max-width: 405px;
+  height: auto;
   width: auto;
 }
 
 .product {
   margin-bottom: 100px;
+}
+
+li {
+  border: 3px solid black;
 }
