Styling and responsiveness

--- a/src/app/components/category-list/category-list.component.html
+++ b/src/app/components/category-list/category-list.component.html
@@ -1,6 +1,6 @@
 <div>
   <h1 class="category-header">Shop</h1>
-  <nav class="nav flex-column category-list d-none d-md-flex">
+  <nav class="nav flex-column category-list d-flex">
     <a *ngFor="let category of categories" routerLink='{{category.title | lowercase}}'
       class="py-2 nav-item has-text-dark category" routerLinkActive="active">{{category.title}}</a>
   </nav>
