--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,30 +2,15 @@
   <div class="container py-3">
 
     <a routerLink="/" class="navbar-brand has-text-dark">ACK</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-      aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
-        <!-- <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li> -->
-      </ul>
-      <span class="navbar-text ml-auto mr-5 has-text-dark">
-        Cart (0)
-      </span>
-      <button class="btn btn-dark rounded-circle ml-1 my-2 my-sm-0"><i class="material-icons has-text-white">
-          shopping_cart
-        </i></button>
-    </div>
+    <span class="navbar-text ml-auto mr-md-5 mr-3 has-text-dark">
+      Cart (0)
+    </span>
+    <button id="shopping-cart" class="btn btn-dark rounded-circle ml-1 my-2 my-sm-0"><i
+        class="material-icons has-text-white">
+        shopping_cart
+      </i></button>
+
   </div>
 </nav>
