Working "add to cart" functionality

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -10,7 +10,7 @@
     <h3 class="product-price has-text-dark mb-5">${{product.price.toFixed(2)}}</h3>
     <p class="product-description has-text-dark mb-5">{{product.description}}</p>
     <button class="product-add-to-cart btn-dark rounded-pill btn-lg has-text-off-white text-uppercase"
-      (click)="addProductToCart">Add to
+      (click)="addToCart(product)">Add to
       cart</button>
   </div>
 </div>
