--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,9 +5,9 @@
 
 
     <span class="navbar-text ml-auto mr-md-5 mr-3 has-text-dark">
-      Cart (0)
+      Cart ({{getItems()}})
     </span>
-    <button id="shopping-cart" class="btn btn-dark rounded-circle ml-1 my-2 my-sm-0"><i
+    <button id="shopping-cart" [ngClass]="{'has-bg-accent': getItems() > 0}" class="btn btn-dark rounded-circle ml-1 my-2 my-sm-0"><i
         class="material-icons has-text-white">
         shopping_cart
       </i></button>
