Arrow on front page

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,80 @@
+@import "src/styles";
+
 .home-title {
   font-size: 66px;
+}
+
+
+#scroll-down {
+  transform: rotate(90deg);
+  padding-top: 79px;
+}
+
+.arrow-container {
+  margin-left: 60px;
+}
+
+.arrow-down {
+  display: block;
+  margin: 0 auto;
+  width: 10px;
+  height: 38px;
+}
+
+.arrow-down:after {
+  content: '';
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  border-top: 2px solid $accent;
+  border-right: 2px solid $accent;
+  transform: rotate(135deg);
+}
+
+
+#scroll-down::before {
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  margin-top: -38px;
+  margin-left: 9px;
+  width: 2px;
+  height: 150px;
+  background: $accent;
+  content: ' ';
+}
+
+
+
+
+@keyframes elasticus {
+  0% {
+
+    transform-origin: 0% 0%;
+
+    transform: scale(1, 0);
+  }
+
+  50% {
+
+    transform-origin: 0% 0%;
+
+    transform: scale(1, 1);
+  }
+
+  50.1% {
+
+    transform-origin: 0% 100%;
+
+    transform: scale(1, 1);
+  }
+
+  100% {
+
+    transform-origin: 0% 100%;
+
+    transform: scale(1, 0);
+  }
 }
