--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,13 @@
 <div class="row has-text-dark">
   <div class="col-md-2"></div>
-  <div class="col-md col-12">
+  <div class="col-md-10 col-12">
     <h1 class="home-title mb-5">Welcome.</h1>
     <h1 class="home-title mt-2">Select a service<br />to get started.</h1>
-
-    <<<(animated left arrow) </div> </div>
+    <div class="float-left arrow-container d-none d-md-block">
+      <div id="scroll-down">
+        <span class="arrow-down">
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
