--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,7 @@
-<p>page-not-found works!</p>
+<div>
+  <h1 class="has-text-dark">
+    404. That means not found!
+    <br/><br/>
+    Maybe try the sidebar :)
+  </h1>
+</div>
